--- a/yanxuan_parent/yanxuan_ad_service/pom.xml
+++ b/yanxuan_parent/yanxuan_ad_service/pom.xml
@@ -102,10 +102,9 @@
             <version>1.0-SNAPSHOT</version>
         </dependency>
         <dependency>
-            <groupId>org.springframework.security</groupId>
-            <artifactId>spring-security-core</artifactId>
-            <version>5.1.6.RELEASE</version>
-            <scope>compile</scope>
+            <groupId>com.it</groupId>
+            <artifactId>yanxuan_common</artifactId>
+            <version>1.0-SNAPSHOT</version>
         </dependency>
     </dependencies>
     <build>
